# kmercounter

./: .gitignore  CMakeLists.txt  KmerCounter.cxx  KmerCounter.h  Makefile  README  README.md  anyoption.h  get_externals.sh  kmercounter  main.cpp  printfile.sh  printtop.sh
source/kmercounter/: CMakeLists.txt  KmerCounter.cxx  KmerCounter.h
source/utils/: CMakeLists.txt  count_kmers.cpp  hello.cpp
tests/: test_ERR047698.filt.fastq.gz.OUT  test_ERR047698_2.filt.fastq.gz.OUT  test_ERR059924_1.filt.fastq.gz.OUT
